--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint src --ext .ts,.tsx --max-warnings 0",
+    "format": "prettier --write src/**/*.{ts,tsx}",
+    "lint:fix": "prettier --write src/**/*.{ts,tsx} && eslint src --ext .ts,.tsx --max-warnings 0 --fix"
   },
   "dependencies": {
     "next": "13.4.12",
@@ -14,11 +16,12 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "5.1.6",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12"
+    "eslint-config-next": "13.4.12",
+    "prettier": "^3.0.0",
+    "typescript": "5.1.6"
   }
 }
